# SolanaVolumeBot

./: README.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: health.rs  token_services.rs  trading_services.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Chart/: Chart.tsx
frontend/src/components/CreateTokenModal/: CreateTokenModal.tsx
frontend/src/components/TokenBar/: TokenBar.tsx
frontend/src/components/TradingPanel/: TradingPanel.tsx
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
